manifests/django-app/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: notes-app-deployment
  namespace: django-app
  labels:
    app: notes-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      volumes:
        - name: notes-app-storage
          persistentVolumeClaim:      # Corrected from "persistantVolumeClaim"
            claimName: notes-app-pvc  # Corrected from "Claimname"
      containers:
        - name: django-notes-app
          image: trainwithshubham/notes-app-k8s:latest
          ports:
            - containerPort: 8000
             #volumeMounts:
              #- name: notes-app-storage
              #mountPath: app/backend  # Removed unnecessary quotes
