manifests/django-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: notes-app-service
  namespace: django-app
  labels:
    app: notes-app
spec:
  type: NodePort
  selector:
    app: notes-app
  ports:
    - port: 8000                # Port on the service
      targetPort: 8000          # Port on the container
      nodePort: 30080           # NodePort (automatically allocates one if not specified)
