manifests/django-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-app-ingress
  namespace: django-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - http:  # Corrected indentation here
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes-app-service
                port:
                  number: 8000
          - path: /apache
            pathType: Prefix
            backend:
              service:
                 name: apache-service
                 port:
                    number: 80
